# MedicalCenter

./: .env.sample  Dockerfile  READMY.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
medical/: admin.py  context_processors.py  forms.py  models.py  services.py  tests.py  urls.py  utils.py  views.py
medical/migrations/: 0001_initial.py  0002_doctors_avatar_doctors_patronymic.py  0002_information_purposes_alter_information_mission.py  0002_initial.py  0003_alter_appointment_appointment_date_and_more.py  0003_alter_information_company_history_and_more.py  0003_feedback_created_at_feedback_user.py  0003_medicaldirection_alter_doctors_avatar_and_more.py  0004_alter_appointment_doctor_alter_appointment_services.py  0004_alter_medicaldirection_options_and_more.py  0004_alter_reviews_text.py  0004_rename_message_feedback_feedback.py  0005_appointment_is_active.py  0005_diagnosticresults_doctor.py  0006_alter_doctors_medical_direction.py  0006_alter_information_company_history_and_more.py  0007_appointment_status.py  0007_services_price.py  0008_information_cardiology_and_more.py  0008_remove_diagnosticresults_doctor_and_more.py  0009_diagnosticresults_general_comments.py  0009_remove_diagnosticresults_comments_and_more.py  0009_remove_doctors_reviews_reviews_doctors_and_more.py  0010_information_image_from_the_company_and_more.py  0010_remove_diagnosticresults_comments_and_more.py  0011_alter_addresshospital_latitude_and_more.py
medical/templates/: about_the_company.html  base.html  (+11 more)
users/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
(+25 files in other folders)
