[tool.poetry]
name = "medicalcenter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.1"
dotenv = "^0.9.9"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
ipython = "^9.2.0"
pillow = "^11.2.1"
requests = "^2.32.3"
flake8 = "^7.2.0"
isort = "^6.0.1"
gunicorn = "^23.0.0"
coverage = "^7.8.2"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
